<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_int"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/input_int_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_int"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSavedInt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/saved_int_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/input_string_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSavedString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/stored_string_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Ingresa un Booleano:"
            android:labelFor="@id/swBool"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swBool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"/>

    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_double"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/input_double_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSavedDouble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/saved_double_text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="24dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/delete_button_text"/>

        <Button
            android:id="@+id/btSave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"/>

    </LinearLayout>

</LinearLayout>